index addded redux script and library and tested Redux  Terminology in code - working

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>Redux Recipes</title>
 </head>
 <body>
-    <script src="./redux.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/5.0.0-alpha.0/redux.js" integrity="sha512-rrwKW9q7MLeNxl6R7SHb2DjciTUBoCFCdbTwMQWdfJ1uqT22lKR5YWdbKoRuBLFGk3XoEZ7jRwWjiCGLopwW1g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./myredux.js"></script>
     
 </body>
